bypass fields addeded to front-end part 2

--- a/app/views/ftic_modules_availables/_form.html.erb
+++ b/app/views/ftic_modules_availables/_form.html.erb
@@ -58,7 +58,7 @@
 
              <div class="col-sm-6 ">
                  <%= f.label :communicationbypass, "Bypass"  %><br>    
-                <%= f.radio_button :communicationbypass, 1 %> On <i class="fa fa-check"></i> &nbsp;<%= f.radio_button :communication, 0 %> Off  &nbsp;<i class="fa fa-times-circle"></i>
+                <%= f.radio_button :communicationbypass, 1 %> On <i class="fa fa-check"></i> &nbsp;<%= f.radio_button :communicationbypass, 0 %> Off  &nbsp;<i class="fa fa-times-circle"></i>
              </div>
              <br><hr>
         </div>
